--- a/Day_5_Pixel_Grid/style.css
+++ b/Day_5_Pixel_Grid/style.css
@@ -139,9 +139,6 @@ input[type="text"]:focus {
   align-content: center;
 }
 
-.pixel {
-}
-
-.pixel-color-black {
-  background-color: black;
+.pixel-container:hover {
+  background-color: rgb(188, 247, 255);
 }
